# text-embedding-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  log.conf  pyproject.toml
src/teg/: __init__.py  embedding.py  main.py
src/teg/router/: liveness_probe.py  text_embedding.py
tests/: embedding_test.py
